--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Budweiser Job Today!</title>
+    <title>Get a Gift Card Today!</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <link href="css/style.css" rel="stylesheet">
@@ -37,8 +37,8 @@
             <div class="prize-date">
                 <p><span><strong>Published on </strong><script>date();</script></span></p>
             </div>
-            <div class="header">You could be Selected to work with budweiser  <span class="color">Budweiser</span> They are offering $18-$22 per Hour!</div>
-            <div class="intro">Do you agree to work with Budweiser!</div>
+            <div class="header">You could be selected for a chance to WIN <span class="color">Walmart</span> Gift Cards worth $500!</div>
+            <div class="intro">If you want to participate in the survey, begin with answering the questions below. Unless... you decide to give up your opportunity for a chance to buy all the goodies you want!</div>
             <div class="question" style="display: block;">
                 <p><b>Question 1 of 4:</b> What is your age group?</p>
                 <a class="answer cannotContinue" href="#">Below 18</a>
@@ -47,14 +47,25 @@
                 <a class="answer" href="#">50 and above</a>
             </div>
             <div class="question">
-                <p><b>Question 2 of 4:</b> How much do you Earned Before?</p>
-                <a class="answer" href="#">Less than $1000</a>
-                <a class="answer" href="#">$1000-$1500</a>
-                <a class="answer" href="#">$1500-$3000</a>
-                <a class="answer" href="#">$5000 and above</a>
+                <p><b>Question 2 of 4:</b> How much do you spend on fashion in a month?</p>
+                <a class="answer" href="#">Less than €100</a>
+                <a class="answer" href="#">€101-€250</a>
+                <a class="answer" href="#">€251-€500</a>
+                <a class="answer" href="#">€351 and above</a>
             </div>
-           
-           
+            <div class="question">
+                <p><b>Question 3 of 4:</b> Where do you normally buy your clothes from?</p>
+                <a class="answer" href="#">David Jones</a>
+                <a class="answer" href="#">M&amp;S</a>
+                <a class="answer" href="#">ASOS</a>
+                <a class="answer" href="#">Other</a>
+            </div>
+            <div class="question">
+                <p><b>Question 4 of 4:</b> How do you want to spend your gift cards if you won the prize?</p>
+                <a class="answer" href="#">Jeans</a>
+                <a class="answer" href="#">Dresses</a>
+                <a class="answer" href="#">Bags</a>
+                <a class="answer" href="#">Shoes</a>
             </div>
         </div>
         <div class="main-content">
@@ -67,7 +78,7 @@
                 <div class="profile"><img src="img/1.png"></div>
                 <div class="comment-content">
                     <p class="name">Barbara B</p>
-                    <p>is it Available ?</p>
+                    <p>Can't Believe it. Estactic.</p>
                 </div>
                 <div class="clr"></div>
             </div>
@@ -75,7 +86,7 @@
                 <div class="profile"><img src="img/2.png"></div>
                 <div class="comment-content">
                     <p class="name">Christine K</p>
-                    <p>Hey There am H.M in Budweiser please Submit your application carefully.</p>
+                    <p>Great! I’m over the moon.</p>
                 </div>
                 <div class="clr"></div>
             </div>
@@ -83,7 +94,7 @@
                 <div class="profile"><img src="img/3.png"></div>
                 <div class="comment-content">
                     <p class="name">Amber Hoinville</p>
-                    <p>They are paying good..is it available in california!</p>
+                    <p>Brilliant, I can’t believe it!</p>
                 </div>
                 <div class="clr"></div>
             </div>
@@ -91,7 +102,7 @@
                 <div class="profile"><img src="img/4.png"></div>
                 <div class="comment-content">
                     <p class="name">Xavier Shiels</p>
-                    <p>Applied !</p>
+                    <p>Great!</p>
                 </div>
                 <div class="clr"></div>
             </div>
@@ -99,7 +110,7 @@
                 <div class="profile"><img src="img/5.png"></div>
                 <div class="comment-content">
                     <p class="name">Isabelle Scherf</p>
-                    <p>Wow Great they are offering me 18$ per hours? Should i join them or not ?!</p>
+                    <p>I’m absolutely over the moon!</p>
                 </div>
                 <div class="clr"></div>
             </div>
@@ -107,7 +118,7 @@
                 <div class="profile"><img src="img/6.png"></div>
                 <div class="comment-content">
                     <p class="name">Will Lane</p>
-                    <p>Submitted my Application waiting for the reply !</p>
+                    <p>What a surprise!</p>
                 </div>
                 <div class="clr"></div>
             </div>
@@ -117,13 +128,13 @@
         <div class="centerIt">Checking your answers...
             <ul class="overlay-checker-points centerIt">
                 <li><img src="img/check.png"> No double registrations found.</li>
-                <li><img src="img/check.png"> jobs are Available </li>
-                <li><img src="img/check.png"> You have a chance to join Budweiser Today enter Your Details in the next Page!</li>
+                <li><img src="img/check.png"> Gift cards available.</li>
+                <li><img src="img/check.png"> You have a chance to win a $150 gift card!</li>
             </ul>
             <div class="terms">Additional T&amp;C may apply.</div>
         </div>
     </div>
-    <a href="http://kenzatech.offerstrack.net/index.php?offer_id=1005&aff_id=1018" style="display: none;" class="gotoURL redirectNow"></a>
+    <a href="https://www.google.com/" style="display: none;" class="gotoURL redirectNow"></a>
     <script src="js/jquery-2.2.4.min.js" type="text/javascript"></script>
     <script src="js/questions.js"></script>
 </body>
